feat[image resizer]: new script added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</div> 
 					<div class="padding">
 						<p class="text">
-							Dr.Tentaculus предлагает вам разноорбразные инструменты для Настольных Ролевых Игр. Не нашли то, что искали? Есть идеи по улучшению? <a href="message">Пишите нам</a>, и мы постараемся помочь! 
+							Dr.Tentaculus предлагает вам разнообразные инструменты для Настольных Ролевых Игр. Не нашли то, что искали? Есть идеи по улучшению? <a href="message">Пишите нам</a>, и мы постараемся помочь! 
 						</p>						
 					</div>
 					<div class="padding">						
