--- a/source/To_dnd_novice.html
+++ b/source/To_dnd_novice.html
@@ -1,5 +1,5 @@
 <h1>Как познакомить новичков с Настольными Ролевыми Играми</h1>
-<img src='archive/img/how_to_end_battle.jpg' alt=''>
+<img src='archive/img/To_dnd_novice.jpg' alt=''>
 <p class='description'>
 Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в НРИ, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней, на текущий момен, пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические рассчеты к минимуму. 
 </p>
@@ -41,7 +41,7 @@
 </p>
 
 <p>
-Выберете известные/заготовленные заклинания.</b> Всем персонажам, умеющим использовать заклинания, следует выбрать какие именно заклинания они знают и какие из них заготовлены на день. Игрок может прочесть описания заклинаний и выбрать из них подходящие для персонажа. Конечно, вам следует оказать всяческую помощь. Механика магии тоже довольно объемна и зависит от класса. Хорошо бы вы помогли составить довольно универсальный список заклинаний, которые могут пригодиться в планируемом приключении. Возможно вам стоит заранее подобрать список заклинаний для персонажей, оставив последнее слово за игроками.  Кроме того, будет здорово, если список известных заклинаний будет сочетаться с концепцией персонажа.
+<b>Выберете известные/заготовленные заклинания.</b> Всем персонажам, умеющим использовать заклинания, следует выбрать какие именно заклинания они знают и какие из них заготовлены на день. Игрок может прочесть описания заклинаний и выбрать из них подходящие для персонажа. Конечно, вам следует оказать всяческую помощь. Механика магии тоже довольно объемна и зависит от класса. Хорошо бы вы помогли составить довольно универсальный список заклинаний, которые могут пригодиться в планируемом приключении. Возможно вам стоит заранее подобрать список заклинаний для персонажей, оставив последнее слово за игроками.  Кроме того, будет здорово, если список известных заклинаний будет сочетаться с концепцией персонажа.
 </p>
 
 <p>
