--- a/source/When_character_die.html
+++ b/source/When_character_die.html
@@ -1,4 +1,4 @@
-<h1>Когда персонаж умирает</h1>
+<h1 class='notready'>Когда персонаж умирает</h1>
 <img src='archive/img/how_to_end_battle.jpg' alt=''>
 <p class='description'>
 Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
