feat[image, generat]

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 	<meta property="og:site_name" content="Dr.Tentaculus">
 	<meta property="og:title" content="Dr.Tentaculus - генераторы, рандомизаторы и прочие полезные инструменты для Настольных Ролевых Игр">
 	<meta property="og:description" content="Генераторы, рандомизаторы и прочие полезные инструменты для Настольных Ролевых Игр">
-	<meta property="og:image" content="_img/og.jpg">
+	<meta property="og:image" content="_img/og_huge.jpg">
+	<meta property="og:image" content="_img/og_huge__800.jpg">
+	<meta property="og:image" content="_img/og_huge__500.jpg">
+	<meta property="og:image" content="_img/og_huge__300.jpg">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://tentaculus.ru">
 	<meta property="og:locale" content="ru_ru">
@@ -160,7 +163,7 @@
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/potion_mix.html">Смешивание зелий</a>
 <br><span class="desc">Персонаж может выпить одно зелье, пока находится под действием другого, или попытаться смешать несколько зелий в одной ёмкости. В этом случае, необычные ингредиенты, используемые в создании зелий, могут привести к непредсказуемым последствиям.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/alchemy_effects.html">Алхимические промашки</a>
-<br><span class="desc">Порою эксперменты в лаборатории заканчивают не очень успешно, это может привести к одному из подобныж d100 результатов.</span>
+<br><span class="desc">Порою эксперменты в лаборатории заканчивают не очень успешно, это может привести к одному из подобных d100 результатов.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Alchemy" class="tag c7">Alchemy</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/sorcerer_wild_magic_effects.html">Дикая магия Чародея</a>
 <br><span class="desc">Магия чародея исходит от диких сил хаоса, лежащих в основе мироздания. Чародей, возможно, подвергся воздействию грубой магии в той или иной форме. Возможно, она просочилась через портал, ведущий в Лимбо, Стихийные Планы или таинственный Дальний Предел. Может быть, чародей был благословлен могущественной феей или отмечены демоном. Или его магия может быть случайностью при рождении, без очевидной причины. Вне зависимости от еѐ происхождения, хаотическая магия бурлит внутри чародея, готовая вырваться наружу.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/wonder_shield.html">Щит Чудес</a>
