feat[img resize, article]

--- a/source/To_dnd_novice.html
+++ b/source/To_dnd_novice.html
@@ -1,4 +1,4 @@
-<h1>Как познакомить новичков с Настольными Ролевыми Играми</h1>
+<h1 class='notready'>Как познакомить новичков с Настольными Ролевыми Играми</h1>
 <img src='archive/img/To_dnd_novice.jpg' alt=''>
 <p class='description'>
 Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в НРИ, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней, на текущий момент, пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму. 
@@ -57,6 +57,6 @@
 </p>
 
 
-<p class='date noRedString'>03.10.2017</p>
+<p class='date noRedString'>10.10.2017</p>
 <p class='hashtags'>DnD, Master, Advice, Novice</p>
 <p class='noRedString'>Источник: <a href='http://inkwellideas.com/advice/how-to-best-introduce-new-players-to-roleplaying-games/'>How to Best Introduce New Players to Roleplaying Games</a></p>
