feat[code]: articles

--- a/source/To_dnd_novice.html
+++ b/source/To_dnd_novice.html
@@ -1,7 +1,7 @@
 <h1 class='notready'>Как познакомить новичков с Настольными Ролевыми Играми</h1>
 <img src='archive/img/To_dnd_novice.jpg' alt=''>
 <p class='description'>
-Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в НРИ, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней, на текущий момент, пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму. 
+Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в Настольных Ролевых Играх, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней, на текущий момент, пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму. 
 </p>
 
 <p><b>Попросите игроков придумать концепцию их персонажей.</b> Вкратце опишите игрокам каждый класс и расу. По возможности, используйте примеры, так Мерлин или Гендальф - это могучие Волшебники, Гимли из Властелина Колец - Дворф Воин и т.д. Вероятно не стоит поощрять попытки отыгрывать конкретного персонажа из книги или фильма (если это не игра по именно той вселенной), ведь креативность игроков, их воображение и возможность влиять на события и персонажей - это важная часть игры. С другой стороны, у кого-нибудь из игроков может быть персонаж крутой лучник, типа Леголаса из Властелина Колец, но с личностью персонажа из Гарри Поттера.
