--- a/source/When_you_plan_new_game.html
+++ b/source/When_you_plan_new_game.html
@@ -6,20 +6,20 @@
 
 <h2>Выберите идеальные Опции для Игры</h2>
 
-<p>Перед началом игры либо Мастер, либо вся игровая группа целиком должны есть и просмотреть этот список, и выбрать идеи для игры - именно для этой системы, именно для этой игры, именно для той кампании, которую планируется провести, именно для этих людей, которые будут участвовать в игре.
+<p>Перед началом игры либо Мастер, либо вся игровая группа целиком должны cесть просмотреть этот список и выбрать идеи для игры - именно для этой системы, именно для этой игры, именно для той кампании, которую планируется провести, именно для этих людей, которые будут участвовать в игре.
 </p>
-<p>Обсудите что из предложенного вам подходит, а что нет, и почему. Если вы используете систему, которая и так предоставляет подобный выбор, просто объедините все вместе.
+<p>Обсудите, что из предложенного вам подходит, а что нет и почему. Если вы используете систему, которая и так предоставляет подобный выбор, просто объедините все вместе.
 </p>
-<p>Да, кто-то из вас может сказать: "Я могу выбрать 2 или 3 из предложенных вариантов" - выберите тот, который лучше всего подходит к планируемой игре.
+<p>Да, кто-то из вас может сказать: "Я могу выбрать 2 или 3 из предложенных вариантов". Выберите тот, который лучше всего подходит к планируемой игре.
 </p>
-<p>Само собой все варианты обсуждаемы, но помните - группе нужно выбрать ОДИН из каждой категории.
+<p>Само собой, все варианты обсуждаемы, но помните - группе нужно выбрать ОДИН из каждой категории.
 </p>
 
-<h2>Обсуждайте вместе и найдите вариант, устраивающий всех.</h2>
+<h2>Обсуждайте вместе и найдите вариант, устраивающий всех</h2>
 
 <p>НЕ НУЖНО заставлять людей делать выбор поодиночке, а затем сравнивать. НЕ НУЖНО это использовать как опросник в попытке выбрать усредненный вариант.</p>
 <p>Если бы вы просто выбирали в какую настольную игру поиграть, вы бы могли просто спросить: "Кто-нибудь хочет поиграть в (эту игру)?". Для этого не нужно устраивать тайное голосование, заставлять каждого писать, во что они хотят играть, а затем смотреть совпадут ли желания.</p>
-<p>Суть в том, чтобы составить четкую картину, о чем будет игра, а НЕ в том, чтобы смешать вместе различные стили - это не сработало успешно ни разу за более чем 30 лет занятия хобби.</p>
+<p>Суть в том, чтобы составить четкую картину о чем будет игра, а НЕ в том, чтобы смешать вместе различные стили - это не сработало успешно ни разу за более чем 30 лет занятия хобби.</p>
 <p>Причина, по которой перечисляется множество вариантов в том, что большинство игроков полагают, будто один или два способа, с помощью которых он играют, это ВСЕ возможные варианты. Увидеть рядом с привычными вариантами новые важно, чтобы подчеркнуть, что существует не ОДИН способ играть, их много. Это даст людям шанс посмотреть на ситуацию с другой стороны, особенно если они ступают на новую территорию.</p>
 <p><strong>Этот инструмент не поможет вам найти общие интересы, если у вас их нет - он поможет точно установить, во что вы будете играть.</strong></p>
 <p>Помните, что для разных игр ответы будут разными. Для разных кампаний так же ответы будут разниться. Например, я играл в D&D со всеми вариантами, описанными ниже, кроме одного.</p>
@@ -28,106 +28,106 @@
 
 <h3>Вы играете, чтобы победить? </h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>Да, однозначно ради победы. Условиями победы являются... </li>
 <li>Хорошая игра никак не связана с победой/поражением. </li>
-</ul>
+</ol>
 
-<h3> Персонаж игроков: </h3>
+<h3> Персонажи игроков: </h3>
 
-<ul class='alpha'>
-<li>Будут работать сообща. Конфликты между ими в основном показушные.</li>
+<ol class='alpha'>
+<li>Будут работать сообща. Конфликты между ними, в основном, показушные.</li>
 <li>Будут работать сообща. Но могут возникнуть крупные конфликты, которые будут исчерпаны через какое-то время. </li>
 <li>Будут работать сообща. Но могут возникнуть крупные конфликты, которые так и не будут разрешены. </li>
 <li>Будут руководствоваться собственными мотивами - могут работать сообща, а могут и друг против друга.</li>
 <li>Ожидается, что будут работать друг против друга. Союз может быть, но только временный.</li>
-</ul>
+</ol>
 
 <h3>Роль Мастера:</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>Мастер готовит набор событий - линейный или ветвящийся; Игроки ведут персонажей через эти события. Мастер иногда дает намеки, куда двигаться.</li>
 <li>Мастер готовит карту с НИПами и/или монстрами. Игроки отправляют своих персонажей в любую доступную им точку на карте, согласно их собственным целям. </li>
 <li>У Мастера нет определенного плана - Мастер просто управляет НИПами, которые действуют исходя из своей мотивации.</li>
 <li>Мастера нет. Все сообща создают историю в свободно форме.</li>
 <li>Мастера нет. Все координируется с помощью правил и системы.</li>
-</ul>
+</ol>
 
 <h3>Игроки будут... </h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...следовать указаниям Мастера, чтобы дополнить историю.</li>
 <li>...определять цели своих персонажей и активно стремиться к их достижению. </li>
 <li>...бросать своих персонажей в трудные ситуации и принимать сложные, порой нерациональные, решения. </li>
-</ul>
+</ol>
 
 <h3>Делать всё возможное для выживания персонажа…</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...это то, что делает хороший игрок.</li>
 <li>...иногда не настолько важно, по сравнению с другим выбором..</li>
 <li>...вообще находится вне фокуса этой игры.</li>
-</ul>
+</ol>
 
 <h3>Отношение Мастера к правилам. Мастер должен...</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...следовать им (в том числе домашним правилам), и будь, что будет.</li>
 <li>...игнорировать их, когда они противоречат чему-либо, что может пойти на пользу истории.</li>
 <li>...игнорировать их, когда они идут в разрез с тем, что "должно" произойти (с точки зрения реализма, условностей сеттинга или жанра)</li>
-</ul>
+</ol>
 
 <h3>После многих сессий, игрок решает, что его персонаж переходит на сторону врага. Это…</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...ни в коем случае не должно происходить. Фу таким быть.</li>
 <li>...персонаж становится НИПом. Сразу или очень скоро.</li>
 <li>...Игрок и Мастер должны были обговорить заранее.</li>
 <li>...это длится пока другие персонажи не выяснят это, или что-то в этом роде</li>
 <li>...значимый момент, отличный пример отличной игры.</li>
-</ul>
+</ol>
 
 <h3>В таверне началась драка! Информация о том, где все находится - столы, стулья, где стоят участники драки - это...</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...важно и будет отображено на карте или сетке, возможно с помощью миниатюр.</li>
 <li>...то, что будет описывать Мастер, а игроки должны задавать вопросы, чтобы узнать больше..</li>
 <li>...можно определить в свой ход, с помощью специальных правил игры (бросков кубиков, тратой токенов, или еще как-то.).</li>
 <li>...в общем-то не так важно, разве что для создания интересной сцены - каждый может придумать/добавить детали. </li>
-</ul>
+</ol>
 
 <h3>Сточки зрения проведения хорошей веселой игры, книга правил это то...</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...что каждый должен прочесть и понять перед игрой, так как правила и сеттинг крайне важны.</li>
 <li>...из чего каждый должен очень хорошо понять правила.</li>
 <li>...из чего каждый должен очень хорошо понять сеттинг. </li>
 <li>...из чего каждый должен как минимум узнать базовые правила.</li>
 <li>...из чего каждый должен как минимум понять жанр, в котором будет игра.</li>
 <li>...что необходимо прочесть только одному из участников игры и объяснить все другим минут за 10.</li>
-</ul>
+</ol>
 
 <h2>Особое</h2>
 Из следующего списка можно выбрать несколько вариантов, которые будут в игре, остальных в ней не будет.
 
 <h3>Эта игра пройдет лучше, если Игроки уделят время на создание персонажей, которые...</h3>
 
-<ul class='alpha'>
+<ol class='alpha'>
 <li>...созданы, чтобы встречать опасности лицом, используя механику и характеристики.</li>
 <li>...созданы с богатой расписанной предысторией.</li>
 <li>...обладают сильной мотивацией и у которых уже есть проблема или какой-то кризис.</li>
 <li>...тесно связаны с другими персонажами (союзниками/врагами/еще кем-то)</li>
 <li>...созданы с учетом знаний, исследований или изучения сеттинга игры, реальной истории или существующей культуры.</li>
-</ul>
+</ol>
 
 <h3>Ответь, чтобы игра шла без заминок</h3>
 
 Все ли знают ответы на вопросы к этой игре? Отвечая на вопросы выше, неплохо бы определить со следующим:
-<ul>
+<ol>
 <li><i>Конфликты какого рода важны для этой игры?</i></li>
 <li><i>Какой тип героев важен для этой игры?</i></li>
 <li><i>Какой вид результата/исхода важен для этой игры?</i></li>
-</ul>
+</ol>
 
 <p>
 P.S. В оригинальной статье довольно много ссылок на другие материалы с примерами и прочими полезными вещами. Мы постараемся перевести и их тоже.
