feat[node]: md description

--- a/index.html
+++ b/index.html
@@ -178,8 +178,14 @@
 <br><span class="desc">Кроме обычного насморка и банальной чумы, в мире существует и недуги, связанные с магией.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=d12" class="tag c9">d12</a></p></li></ul><h2 id="articles_section">Статьи</h2><img src="archive/img/archive_articles__300.jpg" srcset="archive/img/archive_articles__500.jpg 500w, archive/img/archive_articles__800.jpg 800w, archive/img/archive_articles.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
 	<li><a href="archive/articles/End_batle_before_death.html">Альтернативные способы завершить битву</a>
+<br><span class="desc">
+Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
+</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Battle" class="tag c4">Battle</a></p></li>
 	<li><a href="archive/articles/When_you_plan_new_game.html">Подготовка к новой игре</a>
+<br><span class="desc">
+Игра получается особенно хорошей, если все участники играют в одно и то же. К сожалению, многие не задумываются об этом, а в книгах с правилами такая важная деталь зачастую пропускается. Слишком часто люди, сами этого не понимая, приходят на игру с разными идеями и это приводит к беспорядку в процессе игры. Поэтому был предложен этот инструмент для выяснения всех деталей ДО начала игры.
+</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2><img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets"><li><a href="archive/other/blind_pirate_team.html">Слепая команда</a>
