--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
 Игра получается особенно хорошей, если все участники играют в одно и то же. К сожалению, многие не задумываются об этом, а в книгах с правилами такая важная деталь зачастую пропускается. Слишком часто люди, сами этого не понимая, приходят на игру с разными идеями и это приводит к беспорядку в процессе игры. Поэтому был предложен этот инструмент для выяснения всех деталей ДО начала игры.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
+	<li><a href="archive/articles/To_dnd_novice.html">Как познакомить новичков с Настольными Ролевыми Играми</a>
+<br><span class="desc">
+Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в Настольных Ролевых Играх, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней на текущий момент пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму.
+</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
