feat[data, code]

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	</div>
 	<div id="main_block">
 		<div class="max_width">
-			<div id="content" class="ephasizedPage"><h1>Архив</h1><p class="noRedString">В этом разделе собраны материалы, распределенные по нескольким категориям.
+			<div id="content" class="ephasizedPage"><article><h1>Архив</h1><p class="noRedString">В этом разделе собраны материалы, распределенные по нескольким категориям.
 </p><ul class="noBullets">
 <li> <a class="section_link" href="archive#tables_section">Таблицы</a> - Таблицы случайных вещей, сокровищ, событий, слухов и прочего.</li>
 <li> <a class="section_link" href="archive#articles_section">Статьи</a> - Статьи и заметки с советами по проведению Настольных Ролевых Игр.</li>
@@ -186,35 +186,38 @@
 Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Battle" class="tag c4">Battle</a></p></li>
-	<li><a href="archive/articles/When_you_plan_new_game.html">Подготовка к новой игре</a>
-<br><span class="desc">
-Игра получается особенно хорошей, если все участники играют в одно и то же. К сожалению, многие не задумываются об этом, а в книгах с правилами такая важная деталь зачастую пропускается. Слишком часто люди, сами этого не понимая, приходят на игру с разными идеями и это приводит к беспорядку в процессе игры. Поэтому был предложен этот инструмент для выяснения всех деталей ДО начала игры.
-</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
 	<li><a href="archive/articles/To_dnd_novice.html">Как познакомить новичков с Настольными Ролевыми Играми</a>
 <br><span class="desc">
 Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в Настольных Ролевых Играх, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней на текущий момент пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
+	<li><a href="archive/articles/When_character_die.html">Когда персонаж умирает</a>
+<br><span class="desc">Смерть персонажа - довольно неоднозначное событие в ролевой игре. Кто-то из игроков будет делать все возможное, чтобы персонаж выжил или вернулся из мертвых, кто-то примет смерть, пусть это и печально. Информация в статье касается игр, где смерть персонажа вполне возможна с точки зрения механики системы - Dungeon&Dragons, GURPS, Shadowrun и прочие. Но в не меньшей степени "смертность" пресонажей обуславливается договоренностью группы и стилем игры. Так, например, если партия участвует в "песочнице" или играет сразу за Гильдию приключенцев, смерть персонажей может быть более вероятна, чем при игре в детектив или придворные интриги.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
+	<li><a href="archive/articles/When_you_plan_new_game.html">Подготовка к новой игре</a>
+<br><span class="desc">
+Игра получается особенно хорошей, если все участники играют в одно и то же. К сожалению, многие не задумываются об этом, а в книгах с правилами такая важная деталь зачастую пропускается. Слишком часто люди, сами этого не понимая, приходят на игру с разными идеями и это приводит к беспорядку в процессе игры. Поэтому был предложен этот инструмент для выяснения всех деталей ДО начала игры.
+</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
-<li><a href="archive/other/DnD5OctopusDragon.html">Дракон-осьминог (Оctopus Dragon)</a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Monster" class="tag c4">Monster</a> <a href="/archive#q=Dragon" class="tag c3">Dragon</a> <a href="/archive#q=Homebrew" class="tag c5">Homebrew</a></p></li>
-<li><a href="archive/other/Sirilion_city.html">Город Сирилион</a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Map" class="tag c6">Map</a> <a href="/archive#q=City" class="tag c9">City</a></p></li>
-<li><a href="archive/other/Fate_Core_rules.html">Правила Fate Core в комиксах</a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=FateCore" class="tag c7">FateCore</a></p></li>
 <li><a href="archive/other/blind_pirate_team.html">Слепая команда</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
+<li><a href="archive/other/choose_dnd5_class.html">Выбери свой класс</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a></p></li>
+<li><a href="archive/other/DnD5OctopusDragon.html">Дракон-осьминог (Оctopus Dragon)</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Monster" class="tag c4">Monster</a> <a href="/archive#q=Dragon" class="tag c3">Dragon</a> <a href="/archive#q=Homebrew" class="tag c5">Homebrew</a></p></li>
+<li><a href="archive/other/Fate_Core_rules.html">Правила Fate Core в комиксах</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=FateCore" class="tag c7">FateCore</a></p></li>
 <li><a href="archive/other/illusory_meadow.html">Иллюзорная поляна</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/Palladins_hands.html">Наложение рук</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Palladin" class="tag c5">Palladin</a></p></li>
-<li><a href="archive/other/choose_dnd5_class.html">Выбери свой класс</a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a></p></li>
+<li><a href="archive/other/Sirilion_city.html">Город Сирилион</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Map" class="tag c6">Map</a> <a href="/archive#q=City" class="tag c9">City</a></p></li>
 </ul>
-</div>
+</article></div>
 			<div id="sidebar">		
 				<ul id="side_menu">
 					<li>
