--- a/index.html
+++ b/index.html
@@ -186,19 +186,22 @@
 Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Battle" class="tag c4">Battle</a></p></li>
-	<li><a href="archive/articles/To_dnd_novice.html">Как познакомить новичков с Настольными Ролевыми Играми</a>
-<br><span class="desc">
-Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в Настольных Ролевых Играх, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней на текущий момент пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму.
-</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
-	<li><a href="archive/articles/When_character_die.html">Когда персонаж умирает</a>
-<br><span class="desc">Смерть персонажа - довольно неоднозначное событие в ролевой игре. Кто-то из игроков будет делать все возможное, чтобы персонаж выжил или вернулся из мертвых, кто-то примет смерть, пусть это и печально. Информация в статье касается игр, где смерть персонажа вполне возможна с точки зрения механики системы - Dungeon&Dragons, GURPS, Shadowrun и прочие. Но в не меньшей степени "смертность" персонажей обуславливается договоренностью группы и стилем игры. Так, например, если партия участвует в "песочнице" или играет сразу за Гильдию приключенцев, смерть персонажей может быть более вероятна, чем при игре в детектив или придворные интриги.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
 	<li><a href="archive/articles/When_you_plan_new_game.html">Подготовка к новой игре</a>
 <br><span class="desc">
 Игра получается особенно хорошей, если все участники играют в одно и то же. К сожалению, многие не задумываются об этом, а в книгах с правилами такая важная деталь зачастую пропускается. Слишком часто люди, сами этого не понимая, приходят на игру с разными идеями и это приводит к беспорядку в процессе игры. Поэтому был предложен этот инструмент для выяснения всех деталей ДО начала игры.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
+	<li><a href="archive/articles/To_dnd_novice.html">Как познакомить новичков с Настольными Ролевыми Играми</a>
+<br><span class="desc">
+Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в Настольных Ролевых Играх, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней на текущий момент пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму.
+</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
+	<li><a href="archive/articles/Help_DM_help_you.html">Помоги Мастеру помочь тебе</a>
+<br><span class="desc">Стоит помнить, что Настольная Ролевая Игра это совместное творчество, и чтобы весело провести время, приложить немного усилий требуется от всех. Обычно Мастер имеет больше власти над миром игры, чем остальные игроки, поэтому многие считают, что Мастер это тот, кто отвечает за то, чтоб игрокам было хорошо. Отчасти это действительно так, но чтобы Мастер обеспечил вам приятную игру, хорошо бы ему помочь, ведь в отличие от игроков ДМ отвечает за целый мир.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
+	<li class="hidden" data-date="2017.11.1"><a href="archive/articles/When_character_die.html">Когда персонаж умирает</a>
+<br><span class="desc">Смерть персонажа - довольно неоднозначное событие в ролевой игре. Кто-то из игроков будет делать все возможное, чтобы персонаж выжил или вернулся из мертвых, кто-то примет смерть, пусть это и печально. Информация в статье касается игр, где смерть персонажа вполне возможна с точки зрения механики системы - Dungeon&Dragons, GURPS, Shadowrun и прочие. Но в не меньшей степени "смертность" персонажей обуславливается договоренностью группы и стилем игры. Так, например, если партия участвует в "песочнице" (особенно данжен-/гекскроулер) или играет сразу за Гильдию приключенцев, смерть персонажей может быть более вероятна, чем при игре в детектив или придворные интриги.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
