feat[data]: listen players

--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
 	<li><a href="archive/articles/When_character_die.html">Когда персонаж умирает</a>
 <br><span class="desc">Смерть персонажа - довольно неоднозначное событие в ролевой игре. Кто-то из игроков будет делать все возможное, чтобы персонаж выжил или вернулся из мертвых, кто-то примет смерть, пусть это и печально. Информация в статье касается игр, где смерть персонажа вполне возможна с точки зрения механики системы - Dungeon&Dragons, GURPS, Shadowrun и прочие. Но в не меньшей степени "смертность" персонажей обуславливается договоренностью группы и стилем игры. Так, например, если партия участвует в "песочнице" (особенно данжен-/гекскроулер) или играет сразу за Гильдию приключенцев, смерть персонажей может быть более вероятна, чем при игре в детектив или придворные интриги.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
+	<li class="hidden" data-date="2017.11.7"><a href="archive/articles/DM_tips_Ask_and_Listen.html">Советы Мастеру: задавайте вопросы и слушайте</a>
+<br><span class="desc">Заметка о том, что Мастеру, порой, достаточно послушать, о чем говорят игроки, ну или задать вопрос самому, чтобы развить историю еще больше.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
