--- a/index.html
+++ b/index.html
@@ -181,28 +181,28 @@
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=effects" class="tag c6">effects</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=artefacts" class="tag c7">artefacts</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/magical_diseases.html">Магические болезни</a>
 <br><span class="desc">Кроме обычного насморка и банальной чумы, в мире существует и недуги, связанные с магией.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=d12" class="tag c9">d12</a></p></li></ul><h2 id="articles_section">Статьи</h2><img src="archive/img/archive_articles__300.jpg" srcset="archive/img/archive_articles__500.jpg 500w, archive/img/archive_articles__800.jpg 800w, archive/img/archive_articles.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
-	<li><a href="archive/articles/End_batle_before_death.html">Альтернативные способы завершить битву</a>
+	<li><a href="archive/articles/End_batle_before_death.html">Альтернативные способы завершить битву<span class="date" style="float: right">28.07.2017</span></a>
 <br><span class="desc">
 Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Battle" class="tag c4">Battle</a></p></li>
-	<li><a href="archive/articles/When_you_plan_new_game.html">Подготовка к новой игре</a>
+	<li><a href="archive/articles/When_you_plan_new_game.html">Подготовка к новой игре<span class="date" style="float: right">02.10.2017</span></a>
 <br><span class="desc">
 Игра получается особенно хорошей, если все участники играют в одно и то же. К сожалению, многие не задумываются об этом, а в книгах с правилами такая важная деталь зачастую пропускается. Слишком часто люди, сами этого не понимая, приходят на игру с разными идеями и это приводит к беспорядку в процессе игры. Поэтому был предложен этот инструмент для выяснения всех деталей ДО начала игры.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
-	<li><a href="archive/articles/To_dnd_novice.html">Как познакомить новичков с Настольными Ролевыми Играми</a>
+	<li><a href="archive/articles/To_dnd_novice.html">Как познакомить новичков с Настольными Ролевыми Играми<span class="date" style="float: right">10.10.2017</span></a>
 <br><span class="desc">
 Несколько советов мастеру о том, как проще познакомить новых игроков, не имеющих опыта в Настольных Ролевых Играх, с системой ДнД. Оригинальная статья дает советы, основываясь на более ранних редакциях ДнД. В последней на текущий момент пятой редакции Dungeon & Dragons значительная часть механики переработана так, чтобы свести математические расчеты к минимуму.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Novice" class="tag c2">Novice</a></p></li>
-	<li><a href="archive/articles/Help_DM_help_you.html">Помоги Мастеру помочь тебе</a>
+	<li><a href="archive/articles/Help_DM_help_you.html">Помоги Мастеру помочь тебе<span class="date" style="float: right">30.10.2017</span></a>
 <br><span class="desc">Стоит помнить, что Настольная Ролевая Игра это совместное творчество, и чтобы весело провести время, приложить немного усилий требуется от всех. Обычно Мастер имеет больше власти над миром игры, чем остальные игроки, поэтому многие считают, что Мастер это тот, кто отвечает за то, чтоб игрокам было хорошо. Отчасти это действительно так, но чтобы Мастер обеспечил вам приятную игру, хорошо бы ему помочь, ведь в отличие от игроков ДМ отвечает за целый мир.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
-	<li><a href="archive/articles/When_character_die.html">Когда персонаж умирает</a>
+	<li><a href="archive/articles/When_character_die.html">Когда персонаж умирает<span class="date" style="float: right">01.11.2017</span></a>
 <br><span class="desc">Смерть персонажа - довольно неоднозначное событие в ролевой игре. Кто-то из игроков будет делать все возможное, чтобы персонаж выжил или вернулся из мертвых, кто-то примет смерть, пусть это и печально. Информация в статье касается игр, где смерть персонажа вполне возможна с точки зрения механики системы - Dungeon&Dragons, GURPS, Shadowrun и прочие. Но в не меньшей степени "смертность" персонажей обуславливается договоренностью группы и стилем игры. Так, например, если партия участвует в "песочнице" (особенно данжен-/гекскроулер) или играет сразу за Гильдию приключенцев, смерть персонажей может быть более вероятна, чем при игре в детектив или придворные интриги.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
-	<li class="hidden" data-date="2017.11.7"><a href="archive/articles/DM_tips_Ask_and_Listen.html">Советы Мастеру: задавайте вопросы и слушайте</a>
+	<li class="hidden" data-date="2017.11.7"><a href="archive/articles/DM_tips_Ask_and_Listen.html">Советы Мастеру: задавайте вопросы и слушайте<span class="date" style="float: right">07.11.2017</span></a>
 <br><span class="desc">Заметка о том, что Мастеру, порой, достаточно послушать, о чем говорят игроки, ну или задать вопрос самому, чтобы развить историю еще больше.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
 	</ul>
