--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
 	<li class="hidden" data-date="2017.11.7"><a href="archive/articles/DM_tips_Ask_and_Listen.html">Советы Мастеру: задавайте вопросы и слушайте<span class="date" style="float: right">07.11.2017</span></a>
 <br><span class="desc">Заметка о том, что Мастеру, порой, достаточно послушать, о чем говорят игроки, ну или задать вопрос самому, чтобы развить историю еще больше.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
+	<li class="hidden" data-date="2017.11.14"><a href="archive/articles/DM_tips_list.html">Советы Мастеру<span class="date" style="float: right">14.11.2017</span></a>
+<br><span class="desc">Набор небольших советов мастеру по поводу проведения кампании и развития сюжета, о том, как регулировать спорные вопросы по правилам, как награждать и поощрять игроков.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
@@ -335,4 +338,4 @@ VK.Widgets.CommunityMessages("vk_community_messages", 67030284, {disableExpandCh
 
 </script>
 
-<script type="text/javascript" src="archive/js/archive.js"></sript></script></body></html>
+<script type="text/javascript" src="archive/js/archive.js"></script></body></html>
