--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@
   "Куда бы спрятать свою душу?" - таким вопросом неизменно задается каждый кандидат в Личи. Если кольца, чашки и мальчики со шрамами кажутся слишком банальными и заезженными идеями, обратите внимание на этот список. Так же он поможет Мастерам развить историю о противостоянии Партии и Мертвого Мага и добавить туда несколько интересных деталей.
 </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a></p></li>
+	<li><a href="archive/articles/Adding_stuff_to_a_scene.html">Добавление деталей в сцену<span class="date" style="float: right">10.01.2018</span></a>
+<br><span class="desc">В этой заметке приводится несколько советов о том, как можно добавить деталей в сцену, чтобы сделать игру интереснее для вас, ваших товарищей и Мастера, также это может помочь вам преуспеть в бросках, связав их с историей.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Describing" class="tag c8">Describing</a></p></li>
+	<li><a href="archive/articles/Rob_Guide_to_Writing_Good_Aspects.html">Гид Роба по созданию хороших аспектов.<span class="date" style="float: right">15.01.2018</span></a>
+<br><span class="desc">Кажется многие, особенно новички, сталкиваются с трудностями с составлением аспектов, поэтому я решил поделиться своими соображеними на этот счет. Не стесняйтесь дополнять или исправлять меня.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=FateCore" class="tag c7">FateCore</a> <a href="/archive#q=Aspect" class="tag c8">Aspect</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
+	<li><a href="archive/articles/5_Tips to_Help_Describe_a_Scene.html">5 советов Мастеру для описания сцен<span class="date" style="float: right">23.01.2018</span></a>
+<br><span class="desc">В этой статье приводится 5 советов, которые помогут Мастеру описывать окружение персонажей.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Describing" class="tag c8">Describing</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
