--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
-  <title>Dr.Tentaculus</title>
+  <title>Архив</title>
   <base href="https://tentaculus.ru">
   <meta name="theme-color" content="#0288D1">
   <meta name="msapplication-navbutton-color" content="#0288D1">
@@ -12,8 +12,8 @@
   <link rel="stylesheet" type="text/css" href="_less/style.css">
   <link href="_fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
   <!--link rel="shortcut icon" href="favicon.ico" /-->
-  <link rel="alternate" hreflang="x-default" href="https://tentaculus.ru/">
-  <link rel="canonical" href="https://tentaculus.ru/">
+  <link rel="alternate" hreflang="x-default" href="https:tentaculus.ru/archive/">
+  <link rel="canonical" href="https:tentaculus.ru/archive/">
   
   <link rel="icon" href="_img/icon-32.png" sizes="32x32">
 	<link rel="icon" href="_img/icon-192.png" sizes="192x192">
@@ -21,8 +21,8 @@
 	<meta name="msapplication-TileImage" content="_img/icon-270.png">
 	
 	<meta property="og:site_name" content="Dr.Tentaculus">
-	<meta property="og:title" content="Dr.Tentaculus - генераторы, рандомизаторы и прочие полезные инструменты для Настольных Ролевых Игр">
-	<meta property="og:description" content="Генераторы, рандомизаторы и прочие полезные инструменты для Настольных Ролевых Игр">
+	<meta property="og:title" content="Архив">
+	<meta property="og:description" content="Архив">
 	<meta property="og:image" content="_img/og_huge.jpg">
 	<meta property="og:image" content="_img/og_huge__800.jpg">
 	<meta property="og:image" content="_img/og_huge__500.jpg">
@@ -205,7 +205,7 @@
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
 	<li><a href="archive/articles/When_character_die.html">Когда персонаж умирает<span class="date" style="float: right">01.11.2017</span></a>
 <br><span class="desc">Смерть персонажа - довольно неоднозначное событие в ролевой игре. Кто-то из игроков будет делать все возможное, чтобы персонаж выжил или вернулся из мертвых, кто-то примет смерть, пусть это и печально. Информация в статье касается игр, где смерть персонажа вполне возможна с точки зрения механики системы - Dungeon&Dragons, GURPS, Shadowrun и прочие. Но в не меньшей степени "смертность" персонажей обуславливается договоренностью группы и стилем игры. Так, например, если партия участвует в "песочнице" (особенно данжен-/гекскроулер) или играет сразу за Гильдию приключенцев, смерть персонажей может быть более вероятна, чем при игре в детектив или придворные интриги.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a> <a href="/archive#q=Character" class="tag c9">Character</a> <a href="/archive#q=Death" class="tag c6">Death</a></p></li>
 	<li><a href="archive/articles/DM_tips_Ask_and_Listen.html">Советы Мастеру: задавайте вопросы и слушайте<span class="date" style="float: right">07.11.2017</span></a>
 <br><span class="desc">Заметка о том, что Мастеру, порой, достаточно послушать, о чем говорят игроки, ну или задать вопрос самому, чтобы развить историю еще больше.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a></p></li>
@@ -229,6 +229,9 @@
 	<li><a href="archive/articles/5_Tips to_Help_Describe_a_Scene.html">5 советов Мастеру для описания сцен<span class="date" style="float: right">23.01.2018</span></a>
 <br><span class="desc">В этой статье приводится 5 советов, которые помогут Мастеру описывать окружение персонажей.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Describing" class="tag c8">Describing</a></p></li>
+	<li><a href="archive/articles/Friendship_or_Fatality.html">Казнить нельзя помиловать<span class="date" style="float: right">01.02.2018</span></a>
+<br><span class="desc">Рано или поздно каждый Мастер сталкивается с дилеммой - выживет ли персонаж или умрет. Натуральная двадцатка на удар в спину топором разъяренного варвара, заваленный бросок альпинизма при восхождении на высочайший пик мира, взрыв огненного шара неподалеку, пока персонаж лежит в отключке, или просто неудачное место, чтоб вздремнуть. Обстоятельства разные, но вопрос все тот же - убить или спасти?</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Death" class="tag c6">Death</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
