--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 	<meta property="og:url" content="https://tentaculus.ru">
 	<meta property="og:locale" content="ru_ru">
 	  
-  <script type="text/javascript" src="//vk.com/js/api/openapi.js?142"></script>
+  <script type="text/javascript" src="//vk.com/js/api/openapi.js?142" async defer></script>
   <!-- <script type="text/javascript" src="//vk.com/js/api/openapi.js?147"></script> -->
 
-  <script type="text/javascript">
-    VK.init({apiId: 6197190, onlyWidgets: true});
-  </script>
+  <!-- <script type="text/javascript"> -->
+    <!-- VK.init({apiId: 6197190, onlyWidgets: true}); -->
+  <!-- </script> -->
   
   <!-- IE must understand HTML5: -->
   <!--[if IE]>
@@ -229,6 +229,9 @@
 	<li><a href="archive/articles/5_Tips to_Help_Describe_a_Scene.html">5 советов Мастеру для описания сцен<span class="date" style="float: right">23.01.2018</span></a>
 <br><span class="desc">В этой статье приводится 5 советов, которые помогут Мастеру описывать окружение персонажей.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Describing" class="tag c8">Describing</a></p></li>
+	<li><a href="archive/articles/5_Tips_to_Help_Describe_a_Scene.html">5 советов Мастеру для описания сцен<span class="date" style="float: right">23.01.2018</span></a>
+<br><span class="desc">В этой статье приводится 5 советов, которые помогут Мастеру описывать окружение персонажей.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Describing" class="tag c8">Describing</a></p></li>
 	<li><a href="archive/articles/Friendship_or_Fatality.html">Казнить нельзя помиловать<span class="date" style="float: right">01.02.2018</span></a>
 <br><span class="desc">Рано или поздно каждый Мастер сталкивается с дилеммой - выживет ли персонаж или умрет. Натуральная двадцатка на удар в спину топором разъяренного варвара, заваленный бросок альпинизма при восхождении на высочайший пик мира, взрыв огненного шара неподалеку, пока персонаж лежит в отключке, или просто неудачное место, чтоб вздремнуть. Обстоятельства разные, но вопрос все тот же - убить или спасти?</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Death" class="tag c6">Death</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
@@ -272,13 +275,13 @@
 			<div class="flex_container">
 				<div class="left flex_footer vk_placeholder">
 					<div class="padding">
-						<script type="text/javascript" src="//vk.com/js/api/openapi.js?142"></script>
+						<script type="text/javascript" src="//vk.com/js/api/openapi.js?142" async defer></script>
 
 						<!-- VK Widget -->
 						<div id="vk_groups"></div>
-							<script type="text/javascript">
-							VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: "400"}, 67030284);
-							</script>
+							<!-- <script type="text/javascript"> -->
+								<!-- VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: "400"}, 67030284); -->
+							<!-- </script> -->
 					</div>
 				</div>
 				<div class="left flex_footer">
@@ -316,54 +319,55 @@
  
   <script type="text/javascript" src="_js/jquery-m.js"></script><!-- jQuery -->
   <script type="text/javascript" src="_js/script.js"></script><!-- your script -->
+  <script type="text/javascript" src="_js/outer.js" async defer></script><!-- your script -->
   
  <!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-    (function (d, w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter42911239 = new Ya.Metrika({
-                    id:42911239,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true,
-                    webvisor:true,
-                    trackHash:true
-                });
-            } catch(e) { }
-        });
+<!-- <script type="text/javascript"> -->
+    <!-- (function (d, w, c) { -->
+        <!-- (w[c] = w[c] || []).push(function() { -->
+            <!-- try { -->
+                <!-- w.yaCounter42911239 = new Ya.Metrika({ -->
+                    <!-- id:42911239, -->
+                    <!-- clickmap:true, -->
+                    <!-- trackLinks:true, -->
+                    <!-- accurateTrackBounce:true, -->
+                    <!-- webvisor:true, -->
+                    <!-- trackHash:true -->
+                <!-- }); -->
+            <!-- } catch(e) { } -->
+        <!-- }); -->
 
-        var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function () { n.parentNode.insertBefore(s, n); };
-        s.type = "text/javascript";
-        s.async = true;
-        s.src = "https://mc.yandex.ru/metrika/watch.js";
+        <!-- var n = d.getElementsByTagName("script")[0], -->
+            <!-- s = d.createElement("script"), -->
+            <!-- f = function () { n.parentNode.insertBefore(s, n); }; -->
+        <!-- s.type = "text/javascript"; -->
+        <!-- s.async = true; -->
+        <!-- s.src = "https://mc.yandex.ru/metrika/watch.js"; -->
 
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else { f(); }
-    })(document, window, "yandex_metrika_callbacks");
-</script>
+        <!-- if (w.opera == "[object Opera]") { -->
+            <!-- d.addEventListener("DOMContentLoaded", f, false); -->
+        <!-- } else { f(); } -->
+    <!-- })(document, window, "yandex_metrika_callbacks"); -->
+<!-- </script> -->
 <noscript><div><img src="https://mc.yandex.ru/watch/42911239" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
 
 <!-- VK Widget -->
 <div id="vk_community_messages"></div>
-<script type="text/javascript">
-VK.Widgets.CommunityMessages("vk_community_messages", 67030284, {disableExpandChatSound: "1",disableButtonTooltip: "1"});
-</script>
+<!-- <script type="text/javascript"> -->
+<!-- VK.Widgets.CommunityMessages("vk_community_messages", 67030284, {disableExpandChatSound: "1",disableButtonTooltip: "1"}); -->
+<!-- </script> -->
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!-- <script> -->
+  <!-- (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
+  <!-- (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
+  <!-- m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
+  <!-- })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); -->
 
-  ga('create', 'UA-94082824-1', 'auto');
-  ga('send', 'pageview');
+  <!-- ga('create', 'UA-94082824-1', 'auto'); -->
+  <!-- ga('send', 'pageview'); -->
 
-</script>
+<!-- </script> -->
 
 <script type="text/javascript" src="archive/js/archive.js"></script></body></html>
