--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
 	<li><a href="archive/articles/Friendship_or_Fatality.html">Казнить нельзя помиловать<span class="date" style="float: right">01.02.2018</span></a>
 <br><span class="desc">Рано или поздно каждый Мастер сталкивается с дилеммой - выживет ли персонаж или умрет. Натуральная двадцатка на удар в спину топором разъяренного варвара, заваленный бросок альпинизма при восхождении на высочайший пик мира, взрыв огненного шара неподалеку, пока персонаж лежит в отключке, или просто неудачное место, чтоб вздремнуть. Обстоятельства разные, но вопрос все тот же - убить или спасти?</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Death" class="tag c6">Death</a> <a href="/archive#q=Character" class="tag c9">Character</a></p></li>
+	<li><a href="archive/articles/How_to_Engage_Your_Players.html">Вовлечение игроков<span class="date" style="float: right">05.02.2018</span></a>
+<br><span class="desc">Как бы хорошо ведущий не готовился, есть шанс, что за столом кто-нибудь будет отвлекаться. Вот несколько советов, которые могут помочь решить проблемы. </span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Player" class="tag c1">Player</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
