--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
 <br><span class="desc">Щит Чудес - артефакт, вызывающий один из случайных d100 эффектов.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=effects" class="tag c6">effects</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=artefacts" class="tag c7">artefacts</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/magical_diseases.html">Магические болезни</a>
 <br><span class="desc">Кроме обычного насморка и банальной чумы, в мире существует и недуги, связанные с магией.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=d12" class="tag c9">d12</a></p></li></ul><h2 id="articles_section">Статьи</h2><img src="archive/img/archive_articles__300.jpg" srcset="archive/img/archive_articles__500.jpg 500w, archive/img/archive_articles__800.jpg 800w, archive/img/archive_articles.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=d12" class="tag c9">d12</a></p></li><li><a href="/archive/tables/seduction.html">Побочные эффекты соблазнения</a>
+<br><span class="desc">Если так уж вышло, что ваш персонаж соблазнил кого-то, совершите бросок 1d100 по этой таблице и узнайте, что еще произошло. Таблица системо-, сеттинго-, эпохо-независима. Если в системе, которую вы применяете отсутствуют указанные в таблицы механики, мастер решает, как это интерпретировать.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h2 id="articles_section">Статьи</h2><img src="archive/img/archive_articles__300.jpg" srcset="archive/img/archive_articles__500.jpg 500w, archive/img/archive_articles__800.jpg 800w, archive/img/archive_articles.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
 	<li><a href="archive/articles/End_batle_before_death.html">Альтернативные способы завершить битву<span class="date" style="float: right">28.07.2017</span></a>
 <br><span class="desc">
 Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
@@ -334,7 +336,7 @@
  </div>
  
   <script type="text/javascript" src="_js/jquery-m.js"></script><!-- jQuery -->
-  <script type="text/javascript" src="_js/script.js"></script><!-- your script -->
+  <script type="text/javascript" src="_js/script.js?v=0.2"></script><!-- your script -->
   <script type="text/javascript" src="_js/outer.js" async defer></script><!-- your script -->
   
  <!-- Yandex.Metrika counter -->
