--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 <br><span class="desc">Безделушки, которые являются не тем, чем кажутся на первый взгляд.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/graves.html">Надгробья</a>
 <br><span class="desc">Разнообразные могилы и надгробья для прогулок по кладбищам.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li></ul><h3>Артефакты</h3><ul class="tagable noBullets"><li><a href="/archive/tables/magicitemsDnD.html">Случайные магические вещи</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/frost-covered_trinkets.html">Северные безделушки</a>
+<br><span class="desc">Если сюжет разворачивается в диких северных землях, скованных морозом и пронизанных ледяным ветром, героям могут попасться какие-нибудь из этих безделушек.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Артефакты</h3><ul class="tagable noBullets"><li><a href="/archive/tables/magicitemsDnD.html">Случайные магические вещи</a>
 <br><span class="desc">Несколько таблиц по d100 предметов, которые могут попасться в очередном ссокровище или в магической лавке ближайшего городка.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonMasterGuide" class="tag c4">DungeonMasterGuide</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=artifact" class="tag c6">artifact</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Сокровища</h3><ul class="tagable noBullets"><li><a href="/archive/tables/unictreasure.html">Уникальные сокровища</a>
 <br><span class="desc">Иногда приключенцам попадаются поистине уникальные вещи. Вот d100 таких вариантов.</span>
@@ -158,6 +160,8 @@
 <br><span class="desc">Порой приключенцев заносит в довольно неожиданные места. Вот d20 энкаунтеров на болотах.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/rough_town_encounters.html">События в трущобах</a>
 <br><span class="desc"> Разбитые окна, темные переулки, подозрительные личности, шныряющие туда-сюда... А туда ли завернула группа приключенцев? Впрочем, бывают места и похуже.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/village_festivals.html">Деревенские праздники</a>
+<br><span class="desc">Придя в далекую деревушку можно очутиться посреди веселого праздника или таинственного фестиваля. Вот d20 вариантов таких событий.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li></ul><h3>Места</h3><ul class="tagable noBullets"><li><a href="/archive/tables/dangerooms.html">Комнаты в данже</a>
 <br><span class="desc">В подземельях не одни только коридоры со сквозняками да заросшие паутиной комнаты. Если хочется разнообразить очередной данж, вот d20 вариантов.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DMGems" class="tag c1">DMGems</a> <a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=Dungeon" class="tag c0">Dungeon</a> <a href="/archive#q=places" class="tag c2">places</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/tomb_ambient.html">Разнообразные гробницы</a>
@@ -336,7 +340,7 @@
  </div>
  
   <script type="text/javascript" src="_js/jquery-m.js"></script><!-- jQuery -->
-  <script type="text/javascript" src="_js/script.js?v=0.2"></script><!-- your script -->
+  <script type="text/javascript" src="_js/script.js?v=0.21"></script><!-- your script -->
   <script type="text/javascript" src="_js/outer.js" async defer></script><!-- your script -->
   
  <!-- Yandex.Metrika counter -->
